order status updated

--- a/views/admin/orderStatus.ejs
+++ b/views/admin/orderStatus.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/adminHeader') %>
 
 <main> 
-    <form method="POST"  action="/admin/orderStatus/<%= currentOrderStatus %>">
+    <form method="POST"  action="/admin/orderStatus/<%= order.id %>">
         <div class="space-y-12 p-20 flex">
           <div class="border-b border-gray-900/10 pb-12">
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
@@ -10,15 +10,12 @@
                 
                 <div class="mt-2">
                   <select id="orderStatus" name="orderStatus" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
-                    <option class="text-gray-900" ><%=  %></option>
-                  
+                    <option class="text-gray-900" ><%= order.status %></option>
                     <option class="text-gray-900" >Pending</option>
                     <option class="text-gray-900" >Shipped</option>
-                    <option class="text-gray-900" >Out for delevery</option>
                     <option class="text-gray-900" >Delivered</option>
                     <option class="text-gray-900" >Cancelled</option>
-                 
-                   
+                    <!-- <option class="text-gray-900" >Return</option> -->
                   </select>
                 </div>
 
