--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -53,7 +53,8 @@
         <% totalPrice += product.price * cartItem.quantity; %>
         <% } %>
         <% }); %>
-
+        
+        <!------------ checkout -------------->
         <span class="font-bold"> Total: <%= totalPrice %></span><br><br>
         <a href="/checkout/<%= totalPrice %>" class="h-8 ml-4 w-44 bg-cyan-400 text-gray-100 font-semibold text-xs py-2 px-4 rounded-lg hover:bg-cyan-500">
             Checkout
