out of stock fixed

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -174,17 +174,17 @@
               </div>
           </div>
 </section>
-
+ <!-- Pagination setup 
 <section>
- <!-- Pagination setup -->
+
  <div class="flex justify-center mt-8">
   <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-l "> < </button>
   <span class="font-thin  px-3 py-1">1</span>
   <span class="font-thin  px-3 py-1">2</span>
-   <!-- add more ----->
+ 
   <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> > </button>
 </div>
-</section>
+</section> -->
    
 
 
