--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -68,15 +68,26 @@
                   <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %>   
                   </a>
                 </td>
-                <td class="px-6 py-4 flex gap-3">
-                    <span><%= order.status %></span>
 
-                        <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
+                <td class="px-6 py-4 flex gap-3">
+                    <% if (order.status === 'Cancelled') { %>
+                        <span class="text-red-500"><%= order.status %></span>
+                    <% } else if (order.status === 'Delivered') { %>
+                        <span class="text-blue-500"><%= order.status %></span>
+                    <% } else if (order.status === 'Shipped') { %>
+                        <span class="text-green-500"><%= order.status %></span>
+                    <% } else if (order.status === 'Pending') { %>
+                        <span class="text-yellow-500"><%= order.status %></span>
+                    <% } %>
+                    
+                    
+                 
+                       <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-                              </svg>
-                          </a>
-                </td>
+                         <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                        </svg>
+                     </a>
+                 </td>
      
                 <td class="px-6 py-4">
                   <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"> <%
@@ -84,9 +95,7 @@
                     var date = createDate.toLocaleDateString();
                     var time = createDate.toLocaleTimeString();
                     %>
-                    
                     <p><%= date %> &nbsp;<%= time %></p>
-                    
                   </a>
                 </td>
      
