--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -13,11 +13,14 @@
         <div class="bg-white rounded-lg shadow-md flex items-center justify-between">
             <div class="flex items-center space-x-4 p-4">
                 <div class="aspect-w-1 aspect-h-1 w-20 h-20 overflow-hidden">
-                    <img src="./product_images/<%= product.productImage[0] %>" alt="<%= product.productName %>" class="object-cover w-full h-full">
+                    <a href="/product/<%= product._id %>">
+                        <img src="./product_images/<%= product.productImage[0] %>" alt="<%= product.productName %>" class="object-cover w-full h-full">
+               
+                    </a>
                 </div>
                 <div>
                     <h3 class="text-sm text-gray-700">
-                        <a href="/product/<%= product._id %>">
+                        <a href="#">
                             <%= product.productName %>
                         </a>
                     </h3>
