--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -70,14 +70,14 @@
 
 <section class="flex justify-center mt-8">
   <div class="">
-    <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> < </button>
+    <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> < </button> -->
    <% for(let i = 1; i < totalProduct + 1; i++){ %>
 
-   <a href="/pagination/<%= i %>/<%= category %>"> <%= i %> </a>
+   <a class="ml-9 font-sans" href="/pagination/<%= i %>/<%= category %>"> <%= i %> </a>
 
 
    <% } %>
-   <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> > </button>
+   <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> > </button> -->
   </div>
 </section>
 
