--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -60,7 +60,7 @@
      
       <div class="flex">
         <button type="submit" class="flex w-24 justify-center bg-cyan-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
-        <a href="/forgotPassword" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
+        <!-- <a href="/forgotPassword" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a> -->
       </div>
       <!-- googel authentication -->
       <!-- <div class="flex">
