--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -147,6 +147,42 @@
         </div>
       </section>
 
+
+
+      <section class="mt-24">
+        <div class="text-center">
+            <span class="michroma-regular text-gray-900">Related Products</span>
+        </div>
+      
+          <div class="bg-white ">
+              <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+                  <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+                      <% datas[2].forEach((product) => { %>
+                      
+                      <div class="group relative">
+                          <div class="group-hover:scale-110 transition-all duration-300  aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-transparent lg:aspect-none group-hover:opacity-75 lg:h-80">
+                              <img src="/product_images/<%= product.productImage[0] %>">
+                          </div>
+                          <div class="mt-4 flex justify-between">
+                              <div>
+                                  <h3 class="text-sm text-gray-700">
+                                      <a href="/product/<%= product._id %>">
+                                          <span aria-hidden="true" class="absolute inset-0"></span>
+                                          <%= product.productName %>
+                                      </a>
+                                  </h3>
+                                  <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
+                              </div>
+                              <p class="text-sm font-medium text-gray-900"><%= product.price %>₹</p>
+                          </div>
+                      </div>
+                  
+                  <% }) %>
+                  </div>
+              </div>
+          </div>
+</section>
+
    <script>
  
 
@@ -179,10 +215,41 @@ const toCart = (productId, userId, quantity) => {
 const addToCartWithQuantity = (productId, userId) => {
     const quantitySelect = document.getElementById('quantitySelect');
     const selectedQuantity = parseInt(quantitySelect.value);
-    console.log('QUTY: ',selectedQuantity); 
     if (!isNaN(selectedQuantity)) { 
-      console.log('SJUT');
-        toCart(productId, userId, selectedQuantity);
+        fetch(`/addTocart`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                productId: productId,
+                userId: userId,
+                quantity: selectedQuantity
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.error) {
+                // Display error SweetAlert
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: data.error
+                });
+            } else {
+                // Display success SweetAlert
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Success!',
+                    text: data.message
+                }).then(() => {
+                    window.location.href = `/cart`;
+                });
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
     } else {
         console.log('Invalid quantity selected');
     }
