error page added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -88,7 +88,7 @@ initTWE({ Dropdown, Ripple });
           aria-describedby="basic-addon1" />
 
           <button
-          class="my-5 mr-12 ml-2 w-16 h-7 border border-gray-500 relative z-[2] -ms-0.5 flex items-center bg-black px-5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
+          class="my-5 mr-12 ml-2 w-16 h-7 border border-gray-500 relative z-[2] -ms-0.5 hover:bg-white hover:text-gray-950 flex items-center bg-black px-5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
           type="button"
           id="searchButton"
           data-twe-ripple-init
@@ -110,11 +110,11 @@ initTWE({ Dropdown, Ripple });
         
              </div>
              
-                  <a href="#" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-sm my-5 font-sans">Latest</a>
-                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-sm my-5 font-sans">Wishlist</a>
-                  <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Cart</a>
-                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">My Account</a>
-                  <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Logout</a>
+                  <a href="#" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Latest</a>
+                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
+                  <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
+                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
+                  <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Logout</a>
                 </div>
               </div>
           <!-- Profile dropdown -->
