image bug fixed

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -65,23 +65,23 @@
                 <div class="group relative">
 
 
-                  <div class="relative h-[350px] sm:h-[450px]">
+                  <div class="relative aspect-h-1 h-[350px] sm:h-[450px] overflow-hidden">
                     <img
                     src="/product_images/<%= product.productImage[0] %>"
                     alt=""
-                    class="absolute inset-0 w-full object-cover rounded-md h-96 opacity-100 group-hover:opacity-0"
+                    class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0"
                     />
                     
                     <img
                     src="/product_images/<%= product.productImage[1] %>"
                     alt=""
-                    class="absolute inset-0 w-full object-cover rounded-md h-96 opacity-0 group-hover:opacity-100"
+                    class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100"
                     />
                     </div>
 
 
                     
-                    <div class="mt-4 flex justify-between">
+                    <div class=" flex justify-between">
                         <div>
                             <h3 class="text-sm text-gray-700">
                                 <a href="/product/<%= product._id %>">
