--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -18,7 +18,7 @@
                 <% products.forEach(product => { %>
                 <tr class="bg-white border-b dark:border-gray-400 hover:bg-gray-50">
                     <th scope="row" class="flex items-center px-4 md:px-6 py-2 md:py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                        <img class="w-5 h-10 md:w-12 md:h-16" src="/product_images/<%= product.productImage[0] %>" alt="Product Image">
+                        <img class="w-10 h-8 md:w-12 md:h-14" src="/product_images/<%= product.productImage[0] %>" alt="Product Image">
                         <div class="ps-3">
                             <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.productName %></a>
                         </div>
@@ -59,10 +59,23 @@
                 <% }); %>
             </tbody>
         </table>
+        <div class="flex justify-center mt-8">
+            <% let lastPage = 0; %>
+            <% for(let i = 1; i < totalProduct + 2 ; i++) { %>
+              <a class="ml-9 font-sans" href="/admin/pagination/<%= i %>" > <%= i %> </a>
+              <% lastPage = i; %>
+            <% } %>
+            <!-- <% if (lastPage > 0) { %>
+              <a class="ml-9 font-sans" href="/admin/pagination/<%= lastPage %>" > > </a>
+            <% } %> -->
+          </div>
+          
         <section class="text-center mt-5 mb-10 ">
             <a href="./product-add" type="submit" class=" h-10 w-40 rounded-full inline-block  md:w-auto text-gray-100 bg-blue-800 px-4 py-2 text-sm font-semibold leading-6 shadow-sm hover:bg-gray-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Product</a>
         </section>
     </div>
+
+
 </main>
 
 
