condition for order cancel and deliverd

--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -16,8 +16,8 @@
           <p class="text-gray-600 my-2">Thank you for completing your secure online payment.</p>
           <p> Have a great day!  </p>
           <div class="py-10 text-center">
-              <a href="/home" class="px-12 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold py-3">
-                  GO BACK 
+              <a href="/orderHistory" class="px-12 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold py-3">
+                  Order History
              </a>
           </div>
       </div>
