--- a/views/admin/error.ejs
+++ b/views/admin/error.ejs
@@ -12,7 +12,7 @@
 <body>
     
 <div class="grid h-screen place-content-center bg-white px-4">
-    <h1 class="uppercase tracking-widest text-gray-500 hover:text-blue-500">404 | Not Found</h1>
+    <h1 class="uppercase tracking-widest text-gray-500 hover:text-blue-500"><%= message %></h1>
   </div>    
 </body>
 </html>
