added shopping page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -107,10 +107,9 @@ initTWE({ Dropdown, Ripple });
             </svg>
           </span>
         </button>
-        
              </div>
-             
-                  <a href="#" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Latest</a>
+                  <a href="/home" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Home</a>
+                  <a href="/shopping" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Shopping</a>
                   <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
                   <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
                   <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
