--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -69,24 +69,25 @@
                   </a>
                 </td>
 
-                <td class="px-6 py-4 flex gap-3">
-                    <% if (order.status === 'Cancelled') { %>
-                        <span class="text-red-500"><%= order.status %></span>
-                    <% } else if (order.status === 'Delivered') { %>
-                        <span class="text-blue-500"><%= order.status %></span>
-                    <% } else if (order.status === 'Shipped') { %>
-                        <span class="text-green-500"><%= order.status %></span>
-                    <% } else if (order.status === 'Pending') { %>
-                        <span class="text-yellow-500"><%= order.status %></span>
-                    <% } %>
                     
                     
                  
-                       <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
+                     <!----- <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
                          <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
                         </svg>
                      </a>
+                 </td> -->
+
+
+                 <td>
+                    <select id="category" name="category" autocomplete="category-name" class="block w-36 h-7 border-0  text-gray-500 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6 font-sans">
+                    <option  value="<%= order.status %>"><%= order.status %> </option>
+                    <option value="<%= order.status %>"> Shipped</option>
+                    <option  value="<%= order.status %>">Delevered </option>
+                    <option value="<%= order.status %>"> Cancelled</option>
+                    <option  value="<%= order.status %>">Returned </option>
+                    </select>
                  </td>
      
                 <td class="px-6 py-4">
