--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -84,11 +84,19 @@
                 </div>
               </div>
               <div class="sm:col-span-4">
+
                 <label for="extras" class="block text-sm font-medium leading-6 text-gray-900">Extras</label>
-                <div class="mt-2">
-                  <input value="<%= products[0].extras %>"  id="extras" name="extras" type="text" autocomplete="extras" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
+                <select id="extras" name="extras" autocomplete="extras-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                  <option class="text-gray-900" ><%= products[0].extras %></option>
+              
+                  <option class="text-gray-900" >New Arrivals</option>
+                  <option class="text-gray-900" >Trending</option>
+                  <option class="text-gray-900" >Top Selling</option>
+               
+              
+                </select>
+
+
 
         </div>
       
