home product categrised

--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -91,7 +91,7 @@
               
                   <option class="text-gray-900" >New Arrivals</option>
                   <option class="text-gray-900" >Trending</option>
-                  <option class="text-gray-900" >Top Selling</option>
+                  <option class="text-gray-900" >Best Seller</option>
                
               
                 </select>
