--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1345,47 +1345,47 @@ video {
             <span class="text-1xl michroma-regular">OneCart</span>
         </a>
         <ul class="mt-4">
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/dashboard" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                     <i class="ri-home-2-line mr-3 text-lg"></i>
                     <span class="text-sm font-normal">Dashboard</span>
                 </a>
             </li>
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="./userManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Users</span>
                 </a>
             </li>
     
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="./product-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Products</span>
                 </a>
             </li>
     
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="./category-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Categories</span>
                 </a>
             </li>
     
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300 ">
                 <a href="./orderManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Orders</span>
                 </a>
             </li>
     
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="#" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
                     <span class="text-sm font-normal">Coupons</span>
                 </a>
             </li>
-            <li class="mb-1 group">
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="./admin-logout" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                
                     <span class="text-sm font-normal">Logout</span>
