--- a/views/admin/orderStatus.ejs
+++ b/views/admin/orderStatus.ejs
@@ -10,7 +10,7 @@
                 
                 <div class="mt-2">
                   <select id="orderStatus" name="orderStatus" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
-                    <option class="text-gray-900" ><%= order.status %></option>
+                   a <option class="text-gray-900" ><%= order.status %></option>
                     <option class="text-gray-900" >Pending</option>
                     <option class="text-green-900" >Shipped</option>
                     <option class="text-blue-900" >Delivered</option>
